# android-sync

./: .gitignore  CLAUDE.md  README.md  config.example.toml  implementation-plan.md  pyproject.toml
docs/: scheduling-implementation-plan.md  scheduling-spec.md
scripts/: termux-init.sh
specs/: README.md  cli-architecture.md  configuration-schema.md  logging-system.md  scheduling-implementation-plan.md  scheduling.md  security-keystore.md  sync-engine.md
src/android_sync/: __init__.py  cli.py  config.py  keystore.py  logging.py  scheduler.py  sync.py
tests/: __init__.py  test_config.py  test_keystore.py  test_logging.py  test_scheduler.py  test_sync.py
