[project]
name = "android-sync"
version = "0.1.0"
description = "Backup files from Android (Termux) to Backblaze B2 using rclone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
android-sync = "android_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android_sync"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
